--- a/index.html
+++ b/index.html
@@ -72,51 +72,39 @@
     <!-- Fin de la presentación -->
     <!-- Cajas con tipos de sesiones -->
     <section>
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-            <div class="card">
-                <img src="..." class="card-img-top" alt="..."> <!-- decidir si llevan imagen o no -->
-                <div class="card-body">
-                <h5 class="card-title">Astrología</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore officiis, praesentium exercitationem quos excepturi provident neque, in harum fugiat veniam adipisci. Ad harum autem laborum saepe magni, libero sed enim!</p>
-                </div>
+        <div class="row caja">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <article class="icon-box">
+                    <h4 class="title"><a href="">Astrología</a></h4>
+                    <p class="description">Conocé todo sobre los aspectos astrológicos!</p>
+                </article>
             </div>
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <article class="icon-box">
+                    <h4 class="title"><a href="">Mediumnidad</a></h4>
+                    <p class="description">Contactá con entidades de otros planos!</p>
+                </article>
             </div>
-            <div class="col">
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title">Mediumnidad</h5>
-                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime quo cumque soluta reprehenderit illum fugit, accusantium quibusdam atque laudantium earum excepturi blanditiis iure obcaecati non molestiae dolor laborum numquam aperiam?</p>
-                </div>
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <article class="icon-box">
+                    <h4 class="title"><a href="">Péndulo</a></h4>
+                    <p class="description">Obtené respuestas concretas a tus preguntas!</p>
+                </article>
             </div>
-            </div>
-            <div class="col">
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title">Péndulo</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, modi! Non voluptate ex exercitationem dolore voluptatem ipsam dolor, esse quae labore delectus expedita commodi qui totam. Nulla quas dolorum sequi?</p>
-                </div>
-            </div>
-            </div>
-            <div class="col">
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title">Oráculo</h5>
-                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde fuga tempore impedit quis et numquam iste, alias dolorum odio ad rem provident nulla molestiae dicta eum enim ullam ut eveniet.</p>
-                </div>
-            </div>
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <article class="icon-box icon-box-blue" type="button" data-bs-toggle="modal" data-bs-target="#botonModal">
+                    <h4 class="title"><a href="">Oráculo</a></h4>
+                    <p class="description">Hacé ya mismo una pregunta gratis en linea!</p>
+                </article>
             </div>
         </div>
     </section>
     <!-- Fin de cajas con tipos de sesiones -->
     <!-- Footer -->
-    <div class="container">
+    <div class="container" id="footer">
   		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-			<p class="col-md-4 mb-0  text-muted">© 2022 Copyright: Proyecto Desarrollo Web</p>
-			<img src="assets/logo.png" class="dibujo col-md-5 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-mb-auto">
+			<p class="col-md-4 mb-0  text-muted">© 2022 Copyright: Codo a Codo | Python</p>
+			<img src="assets/logo.png" class="col-md-5 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-mb-auto">
 			<ul class="nav col-md-5 justify-content-end">
 				<li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">INICIO</a></li>
 				<li class="nav-item"><a href="nosotros.html" class="nav-link px-2 text-muted">NOSOTROS</a></li>
