index con breakpoints

--- a/index.html
+++ b/index.html
@@ -39,18 +39,22 @@
         <section class="sesiones">
             <div class="sesiones__info">
                 <h4 class="title2"><a href="sesiones.html">Astrología</a></h4>
+                <img src="assets/astrologia.png" alt="símbolo de astrología">
                 <p class="description">Conocé todo sobre los aspectos astrológicos!</p>
             </div>
             <div class="sesiones__info">
                 <h4 class="title2"><a href="sesiones.html">Mediumnidad</a></h4>
+                <img src="assets/mediumnidad.png" alt="símbolo">
                 <p class="description">Contactá con entidades de otros planos!</p>
             </div>
             <div class="sesiones__info">
                 <h4 class="title2"><a href="sesiones.html">Péndulo</a></h4>
+                <img src="assets/pendulo.png" alt="símbolo de péndulo">
                 <p class="description">Obtené respuestas concretas a tus preguntas</p>
             </div>
             <div class="sesiones__info">
                 <h4 class="title2"><a href="sesiones.html">Oráculo</a></h4>
+                <img src="assets/oraculo.png" alt="bola de cristal">
                 <p class="description">Hacé ya mismo una pregunta gratis en linea!</p>
             </div>
         </section>
