--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor">
         <!--Encabezado --> 
         <header class="header"> 
-                <img src="assets/logo.png" alt="logo" class="header__img">
+                <img src="assets/logo.jpg" alt="logo" class="header__img">
                 <div class="header__nav">
                     <ul>
                         <li><a href="index.html">INICIO</a></li>
@@ -31,7 +31,7 @@
                 <p>Consultá a nuestro oráculo</p>
                 <p>y obtené un consejo del tarot</p>
             </div>
-            <a href="sesiones.html" class="main__btn">Consultar al Oráculo</a>
+            <a href="contacto.html" class="main__btn">Consultar al Oráculo</a>
         </section>
         <img src="assets/bola-de-cristal.jpeg" class="main__img" alt="bola de cristal">
         <!-- Cajas con tipos de sesiones -->
