--- a/sesiones.html
+++ b/sesiones.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- CSS -->
     <link rel="stylesheet" href="estilos.css">
-    <title>QUIENES SOMOS</title>
+    <title>SESIONES</title>
     <meta name="astrología" content="conectá y obtené respuestas de las cartas">
 </head>
 <body>
-    <div class="conteiner">
+    <div class="content">
         <!--Encabezado --> 
         <header class="header"> 
                 <img src="assets/logo.jpg" alt="logo" class="header__img">
@@ -23,22 +23,26 @@
                     </ul>
                 </div>
         </header>
-        <!-- Texto de presentación -->
+        <!-- Tipos de Sesiones -->
         <section class="main">
-            <div class="main__title">Si aún no nos conoces... Te contamos!</div>
-            <div class="main__sub2">
-                <p>El Oráculo, es una plataforma en la cual podes acceder a sesiones con los más reconocidos Astrólogos, Tarotistas , Mediums y Radiestesistas.</p><br>
-                <p>Además, podes obtener tu consejo del Tarot, gratis!</p>
-            </div>
+            <div class="main__title">Con quien vas a tener tu sesion?</div>
         </section>
-        <!-- Videos -->
-        <div class="videos">  
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vIqIjTN2ako" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Dalia F. Walker</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/kJHoyM-FbiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>AstroMostra</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hyTJFPL0I0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Eva Spina</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-Y9_q_vLo1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Lu Gaitán</iframe>
+        <div class="carta">
+            <img src="assets/lu-gaitan.jpg" alt="Lu Gaitan" class="front">
+            <img src="assets/lu-gaitan-2.jpg" alt="descripción" class="back">
         </div>
-        <!-- Fin de videos -->
+        <div class="carta">
+            <img src="assets/dalia-f-walker.jpg" alt="Dalia Walker" class="front">
+            <img src="assets/dalia-f-walker-2.jpg" alt="descripción" class="back">
+        </div>
+        <div class="carta">
+            <img src="assets/astromostra.jpg" alt="AstroMostra" class="front">
+            <img src="assets/astromostra2.jpg" alt="descripción" class="back">
+        </div>
+        <div class="carta">
+            <img src="assets/EVA-SPINA.jpg" alt="Eva Spina" class="front">
+            <img src="assets/EVA-SPINA-2.jpg" alt="descripción" class="back">
+        </div>
         <!-- Footer -->
         <div class="footer">
 			<div class="footer__nav">
