--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="index.html">INICIO</a></li>
                         <li><a href="quienessomos.html">QUIENES SOMOS</a></li>
                         <li><a href="sesiones.html">SESIONES</a></li>
-                        <li><a href="contacto.html">CONTACTO</a></li>
+                        <li><a href="contacto.html">RESERVAS</a></li>
                     </ul>
                 </div>
         </header>
