--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 			<div class="footer__nav">
 				<ul>
 					<li><a href="index.html">INICIO</a></li>
-					<li><a href="nosotros.html">QUIENES SOMOS</a></li>
-					<li><a href="relatos.html">SESIONES</a></li>
+					<li><a href="quienessomos.html">QUIENES SOMOS</a></li>
+					<li><a href="sesiones.html">SESIONES</a></li>
 					<li><a href="contacto.html">CONTACTO</a></li>
 				</ul>
 			</div>
