--- a/quienessomos.html
+++ b/quienessomos.html
@@ -24,28 +24,36 @@
                 </div>
         </header>
         <!-- Texto de presentación -->
-        <section class="main">
-            <div class="main__title">Si aún no nos conoces... Te contamos!</div>
-            <div class="main__sub2">
+        <section class="press">
+            <div class="press__title">Si aún no nos conoces... Te contamos!</div>
+            <div class="press__sub">
                 <p>El Oráculo, es una plataforma en la cual podes acceder a sesiones con los más reconocidos Astrólogos, Tarotistas , Mediums y Radiestesistas.</p><br>
                 <p>Además, podes obtener tu consejo del Tarot, gratis!</p>
             </div>
         </section>
         <!-- Videos -->
-        <div class="videos">  
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vIqIjTN2ako" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Dalia F. Walker</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/kJHoyM-FbiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>AstroMostra</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hyTJFPL0I0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Eva Spina</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-Y9_q_vLo1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Lu Gaitán</iframe>
-        </div>
+        <section class="videos">
+            <div class="videos__1">  
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vIqIjTN2ako" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Dalia F. Walker</iframe>
+            </div>
+            <div class="videos__2">    
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kJHoyM-FbiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>AstroMostra</iframe>
+            </div>  
+            <div class="videos__3">  
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hyTJFPL0I0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Eva Spina</iframe>
+            </div>  
+            <div class="videos__4">  
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-Y9_q_vLo1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Lu Gaitán</iframe>
+            </div>
+        </section>
         <!-- Fin de videos -->
         <!-- Footer -->
         <div class="footer">
 			<div class="footer__nav">
 				<ul>
 					<li><a href="index.html">INICIO</a></li>
-					<li><a href="nosotros.html">QUIENES SOMOS</a></li>
-					<li><a href="relatos.html">SESIONES</a></li>
+					<li><a href="quienessomos.html">QUIENES SOMOS</a></li>
+					<li><a href="sesiones.html">SESIONES</a></li>
 					<li><a href="contacto.html">CONTACTO</a></li>
 				</ul>
 			</div>
